Change test app build to aid debug

--- a/tests/test_simple_wifi/Makefile
+++ b/tests/test_simple_wifi/Makefile
@@ -18,14 +18,15 @@ APP_NAME =
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
 
-GEN_XCC_FLAGS = -O2 -g -save-temps -fxscope -DDEBUG_PRINT_ENABLE=1 -DLWIP_XTCP=1
+GEN_XCC_FLAGS = -g -O0 -save-temps -fxscope -DDEBUG_PRINT_ENABLE=1 -DLWIP_XTCP=1 -DXASSERT_ENABLE_ASSERTIONS=1 -DXASSERT_ENABLE_DEBUG=1 -fno-inline-functions
 
 XCC_FLAGS = # Using GEN_XCC_FLAGS to allow for XCC_C_FLAGS to tidy lib_xtcp
 XCC_C_FLAGS = $(GEN_XCC_FLAGS) -Wno-ignored-attributes -Wno-typedef-redefinition # TODO: remove these warning supressions - just to tidy up lib_xtcp
 XCC_XC_FLAGS = $(GEN_XCC_FLAGS)
 XCC_MAP_FLAGS = -report -lquadflash
 
-ENABLE_STAGED_BUILD = 1 # TODO: remove this line
+ENABLE_STAGED_BUILD = 1
+# TODO: remove above line
 
 # The USED_MODULES variable lists other module used by the application.
 
