Suppress "unrecognised pragma" warnings in xC

--- a/tests/test_simple_wifi/Makefile
+++ b/tests/test_simple_wifi/Makefile
@@ -21,8 +21,9 @@ APP_NAME =
 GEN_XCC_FLAGS = -g -O0 -save-temps -fxscope -DLWIP_XTCP=1 -DXASSERT_ENABLE_ASSERTIONS=1 -DXASSERT_ENABLE_DEBUG=1 -fno-inline-functions
 
 XCC_FLAGS = # Using GEN_XCC_FLAGS to allow for XCC_C_FLAGS to tidy lib_xtcp
-XCC_C_FLAGS = $(GEN_XCC_FLAGS) -Wno-ignored-attributes -Wno-typedef-redefinition # TODO: remove these warning supressions - just to tidy up lib_xtcp
-XCC_XC_FLAGS = $(GEN_XCC_FLAGS)
+XCC_C_FLAGS = $(GEN_XCC_FLAGS) -Wno-ignored-attributes -Wno-typedef-redefinition
+XCC_XC_FLAGS = $(GEN_XCC_FLAGS) -Wno-unknown-pragmas
+# TODO: remove above warning suppressions
 XCC_MAP_FLAGS = -report -lquadflash
 
 ENABLE_STAGED_BUILD = 1
