Fix issue with host app source being pulled into app build

--- a/tests/test_simple_wifi/Makefile
+++ b/tests/test_simple_wifi/Makefile
@@ -33,6 +33,8 @@ ENABLE_STAGED_BUILD = 1
 
 USED_MODULES = lib_wifi lib_logging lib_spi lib_gpio lib_filesystem
 
+EXCLUDE_FILES = main.cpp
+
 #=============================================================================
 # The following part of the Makefile includes the common build infrastructure
 # for compiling XMOS applications. You should not need to edit below here.
