Removed save-temps from Makefile.

--- a/tests/test_simple_ap/Makefile
+++ b/tests/test_simple_ap/Makefile
@@ -19,7 +19,7 @@ XTCP_STACK=LWIP
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
 
-GEN_XCC_FLAGS = -g -Os -save-temps -fxscope -DLWIP_XTCP=1 -DXASSERT_ENABLE_ASSERTIONS=1 -DXASSERT_ENABLE_DEBUG=1 -fno-inline-functions
+GEN_XCC_FLAGS = -g -Os -fxscope -DLWIP_XTCP=1 -DDEBUG_PRINT_ENABLE_ALL=1 -DXASSERT_ENABLE_ASSERTIONS=1 -DXASSERT_ENABLE_DEBUG=1 -fno-inline-functions
 
 XCC_FLAGS = # Using GEN_XCC_FLAGS to allow for XCC_C_FLAGS to tidy lib_xtcp
 XCC_C_FLAGS = $(GEN_XCC_FLAGS) -Wno-ignored-attributes -Wno-typedef-redefinition
